--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "npm": "^7.23.0",
+    "rc-form": "^2.4.12",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.18"
