--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "js-cookie": "^3.0.1",
     "npm": "^7.23.0",
     "rc-form": "^2.4.12",
     "react": "17.x",
