--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "antd-mobile-v5": "npm:antd-mobile@^5.0.0-beta.19",
     "js-cookie": "^3.0.1",
     "npm": "^7.23.0",
     "rc-form": "^2.4.12",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-scroll": "^1.8.4",
     "umi": "^3.5.18"
   },
   "devDependencies": {
