--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "js-cookie": "^3.0.1",
     "npm": "^7.23.0",
     "rc-form": "^2.4.12",
+    "rc-virtual-list": "^3.4.3",
     "react": "17.x",
     "react-dom": "17.x",
     "react-scroll": "^1.8.4",
+    "react-virtualized": "^9.22.3",
     "umi": "^3.5.18"
   },
   "devDependencies": {
