--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@wcjiang/notify": "^2.0.12",
     "ahooks": "^3.1.13",
     "antd-mobile-v5": "npm:antd-mobile@^5.0.0-beta.19",
     "js-cookie": "^3.0.1",
