--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
     "@wcjiang/notify": "^2.0.12",
     "ahooks": "^3.1.13",
-    "antd-mobile-v5": "npm:antd-mobile@^5.0.0-beta.19",
+    "antd": "^4.19.2",
+    "antd-mobile-v5": "npm:antd-mobile@^5.6.0",
     "js-cookie": "^3.0.1",
     "npm": "^7.23.0",
     "rc-form": "^2.4.12",
