--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ahooks": "^3.1.13",
     "antd": "^4.19.2",
     "antd-mobile-v5": "npm:antd-mobile@^5.6.0",
+    "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.1",
     "npm": "^7.23.0",
