--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@wcjiang/notify": "^2.0.12",
     "ahooks": "^3.1.13",
     "antd": "^4.19.2",
+    "antd-mobile": "^5.26.0",
     "antd-mobile-icons": "^0.3.0",
-    "antd-mobile-v5": "npm:antd-mobile@^5.6.0",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.1",
