--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "js-cookie": "^3.0.1",
+    "node-rsa": "^1.1.1",
     "npm": "^7.23.0",
     "rc-form": "^2.4.12",
     "rc-virtual-list": "^3.4.3",
