--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
     "antd-mobile-icons": "^0.3.0",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
+    "highlight.js": "^11.7.0",
     "js-cookie": "^3.0.1",
+    "marked-react": "^1.3.0",
     "node-rsa": "^1.1.1",
     "npm": "^7.23.0",
     "rc-form": "^2.4.12",
     "rc-virtual-list": "^3.4.3",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-lowlight": "^3.0.0",
     "react-scroll": "^1.8.4",
     "react-virtualized": "^9.22.3",
+    "remark-gfm": "^3.0.1",
     "umi": "^3.5.18"
   },
   "devDependencies": {
