--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "antd-mobile-icons": "^0.3.0",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
+    "emoji-picker-react": "^4.4.7",
     "highlight.js": "^11.7.0",
     "js-cookie": "^3.0.1",
     "marked-react": "^1.3.0",
@@ -43,13 +44,15 @@
     "react-scroll": "^1.8.4",
     "react-virtualized": "^9.22.3",
     "remark-gfm": "^3.0.1",
-    "umi": "^3.5.18"
+    "umi": "^3.5.18",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.18",
+    "file-loader": "^6.2.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
